--- a/vxml-server/templates/menu.xml
+++ b/vxml-server/templates/menu.xml
@@ -3,9 +3,8 @@
       xmlns:voxeo="http://community.voxeo.com/xmlns/vxml">
 
 <menu>
-    Hello and welcome to the flight booking service. To book a flight, please press 1. For information on delays, press 2.
-    <choice next="lab1"/>
-    <choice next="delays"/>
+    Hello and welcome to the flight booking service.
+    <choice next="lab1" accept="approximate">booking</choice>
+    <choice next="delays" accept="approximate">information</choice>
 </menu>
-
 </vxml>
