--- a/vxml-server/templates/lab2.xml
+++ b/vxml-server/templates/lab2.xml
@@ -3,7 +3,7 @@
   <nomatch>
     I didn't understand.
   </nomatch>
-  
+
   <noinput>
     You didn't say anything.
   </noinput>
@@ -11,7 +11,7 @@
   <form id="test">
     <field name="foo">
       <prompt>Say something!</prompt>
-      <grammar src="grammars/lab2.xml"/>
+      <grammar src="grammars/grammar2.xml"/>
     </field>
     <filled>
 	<prompt>
@@ -23,4 +23,5 @@
 	<goto next="#test"/>
     </filled>
   </form>
+
 </vxml>
