--- a/vxml-server/templates/lab3.xml
+++ b/vxml-server/templates/lab3.xml
@@ -3,10 +3,12 @@
   <form id="test">
     <block name="foo">
       <prompt>
-        The biggest loser among the top 10 cryptocurrencies is bitcoin cash (BCH), down 10.58 percent in the last 24 hours. It's also down 24.11 percent from the recent high of $1,641.40. 
+	The biggest loser among the top 10 cryptocurrencies is bitcoin cash (BCH), down 10.58 percent in the last 24 hours. It's also down 24.11 percent from the recent high of $1,641.40.
         <break time="2s"/>
-         The biggest loser among the top 10 cryptocurrencies is bitcoin cash (BCH), down 10.58 percent in the last 24 hours. It's also down 24.11 percent from the recent high of $1,641.40. 
-      </prompt> 
+  	The <emphasis level="x-strong">biggest</strong> loser among the top 10
+         <phoneme alphabet="ipa" ph="ˈkrɪptəʊkʌrənsiz">cryptocurrencies</phoneme> is bitcoin <prosody volume="strong">cash</prosody>, <break time="2s"/> (BCH)<break time="2s"/>, down 10.58 percent in the last <prosody pitch="x-high">24 hours</prosody>.
+         It's also down 24.<say-as interpret-as="cardinal">11</say-as> percent from the recent high of $1,641.40.
+      </prompt>
     </block>
   </form>
 </vxml>
