complete forms, try adding .grxml extension - makes no difference

--- a/vxml-server/templates/delays.xml
+++ b/vxml-server/templates/delays.xml
@@ -2,8 +2,12 @@
 <vxml version="2.1" xmlns="http://www.w3.org/2001/vxml"
       xmlns:voxeo="http://community.voxeo.com/xmlns/vxml">
 
-<prompt>
-    All flights are on time.
-</prompt>
+<form id="information">
+<block>
+    <prompt>
+        All flights are on time.
+    </prompt>
+</block>
+</form>
 
 </vxml>
