--- a/vxml-server/templates/menu.xml
+++ b/vxml-server/templates/menu.xml
@@ -2,9 +2,18 @@
 <vxml version="2.1" xmlns="http://www.w3.org/2001/vxml"
       xmlns:voxeo="http://community.voxeo.com/xmlns/vxml">
 
-<menu>
-    Hello and welcome to the flight booking service.
-    <choice next="lab1" accept="approximate">booking</choice>
-    <choice next="delays" accept="approximate">information</choice>
+<link next="welcomeMenu">
+    <grammar>
+        <![CDATA[(start over)]]>
+    </grammar>
+</link>
+
+<menu id="welcomeMenu">
+    <prompt bargein="false">
+    Welcome to the flight booking service! Say "start over" at anytime to return to this menu. What would you like to do?
+    </prompt>
+    <enumerate/>
+    <choice next="lab4" accept="approximate">Book a flight</choice>
+    <choice next="delays" accept="approximate">Get information</choice>
 </menu>
 </vxml>
