add start over functionality to lab 1

--- a/vxml-server/templates/delays.xml
+++ b/vxml-server/templates/delays.xml
@@ -10,4 +10,19 @@
 </block>
 </form>
 
+<form id="startOver">
+    <field name="yn" type="boolean">
+    <prompt>
+	Are you sure you want to return to the main menu?
+    </prompt>
+    </field>
+    <filled>
+	<if cond="yn">
+            <goto next="menu" />
+        <else />
+            <goto next="#askFrom" />
+        </if>
+    </filled>
+</form>
+
 </vxml>
