--- a/vxml-server/templates/finalproject.xml
+++ b/vxml-server/templates/finalproject.xml
@@ -1,56 +1,59 @@
-<?xml version="1.0" encoding="UTF-8" ?>
-<grammar version="1.0" tag-format="semantics/1.0" root="yn">
+<?xml version="1.0" encoding="UTF-8"?>
+<vxml version="2.1" xmlns="http://www.w3.org/2001/vxml"
+      xmlns:voxeo="http://community.voxeo.com/xmlns/vxml">
 
-<script> <![CDATA[
-
-  var universe = ['Vienna', 'Stockholm', 'London', 'Madrid', 'Amsterdam', Nicosia];
-  var queue = [];
-  var startCity = universe.randomElement();
+<script>
+  <![CDATA[
+  var universe = ['Vienna', 'Stockholm', 'London', 'Madrid', 'Amsterdam', 'Nicosia'];
+  var used = [];
   var currentCity;
+  var prevCity;
 
-  function beginsWith(firstLetter) {
-    return somestring.startsWith(firstLetter)
-  }
-
-  function Match(lastLetter) {
-  universe.some(firstLetter)
-  }
-
-  function pop(universe) {
-  universe.pop(index)
+  function beginsWith(city) {
+  return city.startsWith(lastLetter)
   }
 
   function lastLetter(city) {
-    return (city[city.length -1]);
+      return (city[city.length -1]);
   }
 
   function firstLetter(city) {
-    return (city.charAt(0));
-
-  Array.prototype.randomElement = function () {
-    return this[Math.floor(Math.random() * this.length)]
+      return (city.charAt(0));
   }
 
+  function notUsed(universe, currentCity) {
+      for (var i = 0; i < universe.length; i++) {
+      if (universe[i] === currentCity) {
+      universe.splice(i, 1);
+          return true;
+      }
+      }
+      return false;
+  }
+
+  function getNextCity(universe, letter) {
+      for (var i = 0; i < universe.length; i++) {
+      if (universe[i].toLowerCase().startsWith(letter)) {
+          return universe[i];    
+      }
+      }
+      return false;
+  }
+
+  Array.prototype.randomElement = function () {
+  return this[Math.floor(Math.random() * this.length)]
+  }
   ]]>
 </script>
 
-
-  <prompt>
-      Hmm... No fair! There is no city whose name begins with x.
-  </prompt>
-
-
-<!-- Data model -->
-<var name="city" />
-<var name="nextCity" />
+<nomatch>
+  Sorry, what was that?
+</nomatch>
+<noinput>
+  I'm waiting.
+</noinput>
 
 <!-- State machine -->
-
-<noinput>
-  <prompt>
-    I'm waiting.
-  </prompt>
-</noinput>
 
 <form id="intro">
   <field name="rules" type="boolean">
@@ -60,134 +63,89 @@
       that begins with the last letter of the previous one and so on. Get it?
     </prompt>
   </field>
+
   <filled>
       <if cond="rules">
         <prompt>
           Perfect! Let's play.
         </prompt>
-        <goto next="#play" />
+        <assign name="prevCity" expr="universe.randomElement()" />
+        <goto next="#begin" />
       <else />
-        <goto next="example" />
+        <goto nextitem="example" />
       </if>
 	  </filled>
+
   <field name="example" type="boolean">
     <prompt bargein="false">
       I say "Stockholm", which ends in an "M". Then you say "Minsk". Then I name a city
       that begins with the letter "K". Are you with me?
     </prompt>
   </field>
+  
   <filled> 
     <if cond="example">
       <prompt>
         Great!
       </prompt>
+      <assign name="prevCity" expr="universe.randomElement()" />
       <goto next="#begin" />
     <else />
       <reprompt />
     </if>
   </filled>
+
 </form>
 
 <form id="begin">
-  <field name="firstCity">
+  <grammar src="grammars/finalproject_grammar.xml" />
+  <field name="currentCity">
     <prompt>
-      I say <value expr="startCity"/>. Your turn.
+      I say <value expr="prevCity"/>. Your turn.
     </prompt>
   </field>
+
+  <nomatch>
+      I didn't understand what you said.
+      <reprompt/>
+  </nomatch>
+  <noinput>
+      Are you there?
+      <reprompt/>
+  </noinput>
+
+<!-- User input = currentCity -->
   <filled>
-    <assign name="currentCity" expr="firstCity" />
-
+<prompt>
+	You said <value expr="currentCity" />
+</prompt>
+<!--
     <if cond="lastLetter == firstLetter">
-        <goto next="#continue" />
-    <else />
-      <prompt>
-        Hehe, nope.
-      </prompt>
-      <goto next="#begin" />
-    </if>
-  </filled>
-</form>
-
-<form id="continue">
-  <field name="cityName">
-    <prompt>
-      <value expr="startCity"/>
-    </prompt>
-  </field>
-  <filled>
-    <assign name="currentCity" expr="cityName" />
-
-    <if cond="lastLetter == firstLetter">
-        <goto next="#continue" />
-    <else />
-      <prompt>
-        Hehe, nope.
-      </prompt>
-      <goto next="#begin" />
-    </if>
-  </filled>
-</form>
-
-<form id="finish">
-  <block>
-    <prompt>
-      Yay! Well done.
-    </prompt>
-  </block>
-</form>
-
-<!-- 
-'Andorra la Vella'
-'Amsterdam'
-'Berlin'
-'Belgrade'
-'Athens'
-'Bratislava'
-'Ankara'
-'Bern'
-'Bucharest'
-'Copenhagen'
-'Brussels'
-'Chișinău'
-'Dublin'
-'Douglas'
-'Gibraltar'
-'Helsinki'
-'Kiev'
-'Lisbon'
-'London'
-'Ljubljana'
-'Luxembourg'
-'Madrid'
-'Minsk'
-'Monaco'
-'Moscow'
-'Nicosia'
-'Oslo'
-'Paris'
-'Podgorica'
-'Prague'
-'Pristina'
-'Riga'
-'Rome'
-'Reykjavik'
-'Sarajevo'
-'Stockholm'
-'Skopje'
-'Saint Helier'
-'St. Peter Port'
-'Sofia'
-'Tallinn'
-'Tirana'
-'Tórshavn'
-'City of San Marino'
-'Valletta'
-'Vatican City'
-'Vienna'
-'Vilnius'
-'Vaduz'
-'Warsaw'
-'Zagreb'
-
 -->
-</grammar>
+    <if cond="lastLetter(prevCity) == firstLetter(currentCity).toLowerCase()">
+      <if cond="notUsed(universe, currentCity)">
+       <if cond="getNextCity(universe, lastLetter(currentCity))">
+          <assign name="prevCity" expr="getNextCity(universe, lastLetter(currentCity))" />
+          <assign name="currentCity" expr="false" /> 
+          <goto next="#begin" />
+        <else />
+          <prompt>
+            I can't think of anything... you win!
+            <exit />
+          </prompt>
+		</if>
+      <else />
+        <prompt>
+          We've already named this city.
+        </prompt>
+      </if>
+    <else />
+      <prompt>
+        Hehe, nope. Try again.
+      </prompt>
+      <assign name="currentCity" expr="false" />
+      <goto next="#begin" />
+    </if>
+  </filled>
+</form>
+</vxml>
