--- a/vxml-server/templates/lab1.xml
+++ b/vxml-server/templates/lab1.xml
@@ -182,4 +182,14 @@
       </prompt>
     </block>
   </form>
+
+<!-- Start over -->
+
+  <link next="lab1_menu">
+      <grammar mode="voice" version="1.0" xml:lang="en-US" root="init">
+          <rule id="init" scope="public">
+              <item>start over</item>
+          </rule>
+      </grammar>
+
 </vxml>
